exports[`test should render a default component 1`] = `
<List
  isDivided={false} />
`;

exports[`test should render with isDivided 1`] = `
<List
  isDivided={true}>
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should render with items 1`] = `
<List
  isDivided={false}>
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <type
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item 1`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={true}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item 2`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item 3`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;

exports[`test should select an item 4`] = `
<List
  isDivided={false}>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelectable={true}
    isSelected={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelectable={false}
    isSelected={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0" />
</List>
`;
